--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mini Twitter</title>
 </head>
+
 <body>
     <div class="app">
         <form action="">
             <label for="tweet">Your tweet goes here:</label>
-            <textarea name="tweet" id="tweet" cols="30" rows="10"> 
+            <textarea name="tweet" id="tweet" cols="30" rows="10">
+
+
+
             </textarea>
-            <button type="submit">Post it!</button>
+            <button id="sumbit" type="submit">Post it!</button>
         </form>
         <div class="timeline">
             <div class="tweet">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptates necessitatibus eaque commodi illum at dolores nostrum dolore, praesentium dicta nulla fugiat natus fuga similique corrupti alias ipsa asperiores dignissimos.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptates necessitatibus eaque
+                    commodi illum at dolores nostrum dolore, praesentium dicta nulla fugiat natus fuga similique
+                    corrupti alias ipsa asperiores dignissimos.
                 </p>
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
 </body>
+
 </html>
