count characters in new tweet

--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
     <div class="app">
         <form action="">
             <label for="tweet">Your tweet goes here:</label>
-            <textarea name="tweet" id="tweet" cols="30" rows="10">
-
-
-
-            </textarea>
+            <textarea name="tweet" id="tweet" cols="30" rows="10"></textarea>
+            <div class="counter">
+                <p>Character count:</p>
+                <p id="count">0</p>
+            </div>
             <button id="sumbit" type="submit">Post it!</button>
         </form>
-        <div class="timeline">
-
-        </div>
+        <div class="timeline"></div>
     </div>
     <script src="src/index.js"></script>
 </body>
