--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
       </form>
     </div>
     
-
     <div class='counter'>Character count: <p class='charCount'></p></div>
     <div class='counter'>Tweet count: <p class='tweetCount'></p></div>
-    <div class="timeline"> 
-            
-    </div>
+    <div class="timeline"></div>
 
   <script type="text/javascript" src="src/index.js"></script>
   </body>
